--- a/src/style.css
+++ b/src/style.css
@@ -1,21 +1,8 @@
-*{
-    box-sizing: border-box;
-}
-
-body{
-    margin: 0;
-}
-
-.screenContainer{
-    margin: 1rem;
-    text-align: center;
-    background-color: pink;
-}
 
 .loginCard{
     align-self: center;
     width: 500;
-    height: 300;
+    height: 500;
     background-color: darkslategray;
     gap: 1rem;
     align-items: center;
@@ -23,6 +10,11 @@ body{
 
 .loginCardButtons{
     gap: 0.5rem;
+}
+
+.screenContainer{
+    margin: 1rem;
+    text-align: center;
 }
 
 .navigation{
@@ -65,7 +57,6 @@ body{
     flex-direction: row;
     justify-content: space-around;
     padding: 1rem;
-    background-color: rebeccapurple;
 }
 
 .shoppingList{
@@ -73,22 +64,19 @@ body{
     align-content: center;
     flex-wrap: wrap;
     gap: 1rem;
-    background-color: red;
+    background-color: darkslategray;
     padding: 1rem;
 }
 
 .shoppingCart{
-    background-color: blue;
+    background-color: darkslategray;
+    min-height: 20rem;
     padding: 1rem;
 }
 
 .itemCard{
     padding: 0.5rem;
-    background-color: darkslategray;
-}
-
-.itemInfoTable{
-    background-color: red;
+    background-color: azure;
 }
 
 .itemInfo{
@@ -98,7 +86,6 @@ body{
     flex-direction: row;
     justify-content: space-between;
     align-items: baseline;
-    background-color: blue;
 }
 
 .itemButtons{
